[package]
name = "napi-bind"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1"
futures = "0.3"
napi = { version = "3.0.0-alpha.31", features = ["async", "anyhow", "napi8"] }
napi-derive = { version = "3.0.0-alpha.28", default-features = false, features = [
    "type-def",
] }
regex = "1.11.1"
tokio = { version = "1", features = ["rt"] }
tokio_with_wasm = { version = "0.8.2", features = ["rt"] }

[build-dependencies]
napi-build = "2.1.5"

[profile.release]
lto = true
strip = "symbols"

[profile.release-wasi]
codegen-units = 16
debug = 'full'
inherits = "release"
lto = "thin"
opt-level = 3
painc = "unwind"
strip = "none"
